nextcloud-redirectregex.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-redirectregex
  namespace: nextcloud
spec:
  redirectRegex:
    permanent: true
    regex: "https://(.*)/.well-known/(?:card|cal)dav"
    replacement: "https://$$1/remote.php/dav"
