nextcloud-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb 
        image: mariadb
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: nextcloud-db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: nextcloud-db-data
        persistentVolumeClaim:
          claimName: nextcloud-db-pvc
