nextcloud-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud                  # < name of the service
  namespace: nextcloud                     # < namespace where to place service
  labels:
    app: nextcloud
spec:
  ports:
    - port: 80
  selector:
    app: nextcloud
