nextcloud-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: nextcloud
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
  selector:
    app: mariadb
